# llama.cpp

./: .gitignore  README.md
ggml/src/ggml-rpp/: CMakeLists.txt  README.md  ggml-rpp.cpp  note.txt  rpp_common.h  rpp_dfs.h  rpp_kernel_ctx.h  rpp_kernel_utils.cpp  rpp_kernel_utils.h  rpp_ops_utils.cpp  rpp_ops_utils.h  rpp_quant_lut.h
ggml/src/ggml-rpp/rpp_add/: rpp_add.h
ggml/src/ggml-rpp/rpp_add/src/: rpp_kernel_add.cpp  rpp_openrt_add.cpp
ggml/src/ggml-rpp/rpp_con2d/: rpp_con2d.h
ggml/src/ggml-rpp/rpp_con2d/src/: rpp_kernel_con2d.cpp
ggml/src/ggml-rpp/rpp_cont/: rpp_cont.h
ggml/src/ggml-rpp/rpp_cont/kernel/: cont.c  cont.s  dma_dyn_d0_2d.s  kernel_cfg.json  memcpy_align.c  memcpy_align.s
ggml/src/ggml-rpp/rpp_cont/src/: rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_cont.cpp  rpp_kernel_memcpy_align.h  rpp_kernel_param.h  rpp_memcpy_cont.cpp
ggml/src/ggml-rpp/rpp_cpy/: rpp_cpy.h
ggml/src/ggml-rpp/rpp_cpy/kernel/: copy.c  kernel_cfg.json
ggml/src/ggml-rpp/rpp_cpy/src/: rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_cpy.cpp  rpp_kernel_param.h
ggml/src/ggml-rpp/rpp_div/: rpp_div.h
ggml/src/ggml-rpp/rpp_div/src/: rpp_kernel_div.cpp
ggml/src/ggml-rpp/rpp_expert_forward/: rpp_expert_forward.h
ggml/src/ggml-rpp/rpp_expert_forward/kernel/: dma_expert_params_to_fram.s  gather_expert_tokens.s  init_expert_id.s  kernel_cfg.json  llm_gelu_dyn.s  matmul_id_fusion.c  matrix_mul_q2s_nolut_deqaunt_f16.s  matrix_mul_q2s_nolut_deqaunt_f16_ept32.s  matrix_mul_q2xs_nolut_deqaunt_f16.s  matrix_mul_q2xs_super_scale.s  matrix_mul_q3xxs_deqaunt_nolut_f16.s  matrix_mul_q3xxs_super_scale.s  matrix_mul_tn4_f16_f16_dyn.s  matrix_mul_tn4_f16_f16_dyn_v1.s  mem_copy_2d_align_bf16_xy_opt_dyn.s  mem_copy_2d_align_bf16_xy_opt_dyn_v1.s  moe_topk_combine_dyn.s  rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_param.h  update_next_expert_id.s
ggml/src/ggml-rpp/rpp_expert_forward/src/: rpp_kernel_expert_forward.cpp
ggml/src/ggml-rpp/rpp_expert_routing/: rpp_expert_routing.h
ggml/src/ggml-rpp/rpp_expert_routing/src/: rpp_kernel_expert_routing_build.hpp  rpp_kernel_expert_routing_fusion.cpp
ggml/src/ggml-rpp/rpp_flash_attn_ext/: rpp_flash_attn_ext.h
ggml/src/ggml-rpp/rpp_flash_attn_ext/kernel/: blas_trans_padding.s  flash_atten.c  kernel_cfg.json  kv_transpose_16bits.s  llama3_mul_bc_x_f16.s  llama3_mul_bc_x_f16_dmb.s  llama3_sub_bc_x_exp_f16_opt.s  llama3_sub_bc_x_exp_f16_opt_dmb.s  mem_copy_2d_align_bf16_xy_opt.s  opt_aln_reduce_reciprocal_f16.s  opt_binary_add_f16.s  opt_gen_reduce_f16.s  opt_reduce_f16.s  opt_scale_uniform_f16.s  opt_vector_cvt_f16_f32.s
ggml/src/ggml-rpp/rpp_flash_attn_ext/kernel_vxm/: blas_transpose_u16.s  expand_1_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_2_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_3_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_6_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_7_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_8_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_matrix_batch_hkv_vxM_f16_f16_f32_dyn.s  expand_matrix_batch_vxM_f16_f16_f32_dyn.s  expand_matrix_batch_vxM_group_f16_dyn.s  flash_atten_vxm.c  kernel_cfg.json  llama3_loop2_mid_add_bc_y_f32_f16_f32.s  llama3_loop2_mid_mish_f16.s  llama3_loop2_mid_mul_bc_x_f16.s  llama3_loop2_mid_reduce_max_f32.s  llama3_loop2_mid_reduce_sum_f16.s  llama3_loop2_mid_sub_bc_x_f32_f16.s  opt_aln_reduce_f32.s  opt_aln_z32_reduce_f32.s  opt_gen_reduce_f32.s  opt_gen_reduce_reciprocal_f16.s  opt_reduce_f32.s  opt_reduce_reciprocal_f16.s
ggml/src/ggml-rpp/rpp_flash_attn_ext/src/: rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_flash_attn_ext.cpp  rpp_kernel_param.h  rpp_openrt_flash_attn_ext.cpp
ggml/src/ggml-rpp/rpp_get_rows/: rpp_get_rows.h
ggml/src/ggml-rpp/rpp_get_rows/kernel/: dma_ddr_to_row_ddr.s  dma_ddr_to_row_ddr_non_cont.s  get_rows.c  kernel_cfg.json
ggml/src/ggml-rpp/rpp_get_rows/src/: rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_get_rows.cpp  rpp_kernel_param.h  rpp_memcpy_get_rows.cpp  rpp_openrt_get_rows.cpp
ggml/src/ggml-rpp/rpp_glu/: rpp_glu.h
ggml/src/ggml-rpp/rpp_glu/kernel_geglu_erf/: gelu.c  kernel_cfg.json  llm_add_rsqrt_lut.s  llm_lut.s  llm_split_gelu.s  rpp_kernel_build.h
ggml/src/ggml-rpp/rpp_glu/kernel_swiglu/: kernel_cfg.json  llm_gelu.s  llm_split_gelu.s  opt_vector_cvt_f16_f32.s  rpp_kernel_build.h  rpp_kernel_param.h  silu.c
ggml/src/ggml-rpp/rpp_glu/src/: rpp_kernel_glu.cpp  rpp_openrt_glu.cpp
ggml/src/ggml-rpp/rpp_l2_norm/: rpp_l2_norm.h
ggml/src/ggml-rpp/rpp_l2_norm/src/: rpp_kernel_build.h  rpp_kernel_l2_norm.cpp
ggml/src/ggml-rpp/rpp_mul/: rpp_mul.h
ggml/src/ggml-rpp/rpp_mul/kernel/: elementwise.c  elementwise_add_1111.s  elementwise_mul.s  elementwise_mul_111.s  kernel_cfg.json
ggml/src/ggml-rpp/rpp_mul/src/: rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_mul.cpp  rpp_kernel_param.h  rpp_openrt_mul.cpp
ggml/src/ggml-rpp/rpp_mul_mat/: rpp_mul_mat.h
ggml/src/ggml-rpp/rpp_mul_mat/kernel_bf16/: kernel_cfg.json  matmul_bf16.c  matrix_mul_tn1_f16_f16.s  matrix_mul_tn2_f16_f16.s  rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_param.h
ggml/src/ggml-rpp/rpp_mul_mat/kernel_q2_s/: kernel_cfg.json  matmul_q2s.c  matrix_mul_q2s_deqaunt_f16.s  matrix_mul_tn4_f16_f16.s  rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_param.h
ggml/src/ggml-rpp/rpp_mul_mat/kernel_q2_s_nolut/: kernel_cfg.json  matmul_q2s_nolut.c  matrix_mul_q2s_nolut_deqaunt_f16.s  matrix_mul_q2s_nolut_super_scale.s  rpp_kernel_block.h  rpp_kernel_build.h  rpp_kernel_param.h
ggml/src/ggml-rpp/rpp_mul_mat/kernel_q2_s_vxm/: kernel_cfg.json  (+6 more)
ggml/src/ggml-rpp/rpp_mul_mat_id/: rpp_mul_mat_id.h
ggml/src/ggml-rpp/rpp_norm/: rpp_norm.h
ggml/src/ggml-rpp/rpp_permute/: rpp_permute.h
ggml/src/ggml-rpp/rpp_pool_2d/: rpp_pool_2d.h
ggml/src/ggml-rpp/rpp_reduce_sum/: rpp_reduce_sum.h
ggml/src/ggml-rpp/rpp_rms_norm/: rpp_rms_norm.h
ggml/src/ggml-rpp/rpp_rope/: rpp_rope.h
ggml/src/ggml-rpp/rpp_scale/: rpp_scale.h
ggml/src/ggml-rpp/rpp_set_rows/: rpp_set_rows.h
ggml/src/ggml-rpp/rpp_soft_max/: rpp_soft_max.h
ggml/src/ggml-rpp/rpp_unary/: rpp_unary.h
(+221 files in other folders)
